TGR-1393: Find last request does not always see the last request